syntax = "proto3";

package catalog.v1;

import "google/protobuf/struct.proto";

// ---------------------------------------------------------
// Enums
// ---------------------------------------------------------

enum CatalogEntityType {
  CATALOG_ENTITY_TYPE_UNSPECIFIED = 0;
  CATALOG_ENTITY_TYPE_DISTRIBUTION = 1;
  CATALOG_ENTITY_TYPE_DATA_SERVICE = 2;
  CATALOG_ENTITY_TYPE_CATALOG = 3;
  CATALOG_ENTITY_TYPE_DATASET = 4;
}

// ---------------------------------------------------------
// Shared Data Models (Entities)
// ---------------------------------------------------------

// catalog::Model
message Catalog {
  string id = 1; // URN
  optional string foaf_home_page = 2;
  optional string dct_conforms_to = 3;
  optional string dct_creator = 4;
  optional string dct_identifier = 5;
  string dct_issued = 6; // ISO 8601 String
  optional string dct_modified = 7; // ISO 8601 String
  optional string dct_title = 8;
  optional string dspace_participant_id = 9;
  bool dspace_main_catalog = 10;
}

// dataservice::Model
message DataService {
  string id = 1; // URN
  optional string dcat_endpoint_description = 2;
  string dcat_endpoint_url = 3;
  optional string dct_conforms_to = 4;
  optional string dct_creator = 5;
  optional string dct_identifier = 6;
  string dct_issued = 7;
  optional string dct_modified = 8;
  optional string dct_title = 9;
  optional string dct_description = 10;
  string catalog_id = 11; // Foreign Key URN
}

// dataset::Model
message Dataset {
  string id = 1; // URN
  optional string dct_conforms_to = 2;
  optional string dct_creator = 3;
  optional string dct_identifier = 4;
  string dct_issued = 5;
  optional string dct_modified = 6;
  optional string dct_title = 7;
  optional string dct_description = 8;
  string catalog_id = 9; // Foreign Key URN
}

// distribution::Model
message Distribution {
  string id = 1; // URN
  string dct_issued = 2;
  optional string dct_modified = 3;
  optional string dct_title = 4;
  optional string dct_description = 5;
  string dcat_access_service = 6;
  string dataset_id = 7; // Foreign Key URN
  optional string dct_format = 8;
}

// policy_template::Model
message PolicyTemplate {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  google.protobuf.Struct content = 4; // JSON
  optional google.protobuf.Struct operand_options = 5; // JSON
  string created_at = 6;
}

// odrl_offer::Model (OdrlPolicyDto)
message OdrlPolicy {
  string id = 1;
  google.protobuf.Struct odrl_offer = 2; // OdrlPolicyInfo / JSON
  string entity_id = 3;
  CatalogEntityType entity_type = 4;
  string created_at = 5;
}

// ---------------------------------------------------------
// List Responses
// ---------------------------------------------------------

message CatalogListResponse {
  repeated Catalog catalogs = 1;
}

message DataServiceListResponse {
  repeated DataService data_services = 1;
}

message DatasetListResponse {
  repeated Dataset datasets = 1;
}

message DistributionListResponse {
  repeated Distribution distributions = 1;
}

message PolicyTemplateListResponse {
  repeated PolicyTemplate policy_templates = 1;
}

message OdrlPolicyListResponse {
  repeated OdrlPolicy policies = 1;
}